--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Monthly Budget Calculator</title>
+    <title>Monthly Money Calculator</title>
 </head>
 
 <body>
     <header class="container mt-1">
-        <h1 class="text-center fs-1 mt-4 header">Monthly Budget Calculator
+        <h1 class="text-center fs-1 mt-4 header">Monthly Money Calculator
             <img src="images/m-bag.jpg" alt="" class="icon-img">
         </h1>
     </header>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-lg-6" style="background-color: #F8F8F8;">
                     <h3 class="text-center mt-4">Income</h3>
-                    <div class="form-group d-flex justify-content-between md:mx-5 mt-2 align-items-center">
+                    <div class="form-group d-flex justify-content-between md:mx-5 mt-2 mb-4 align-items-center">
                         <label for="focusedInput" class="fs-4">Income:</label>
                         <input type="text" id="income-input">
                     </div>
@@ -63,9 +63,16 @@
                     <h3 class=" text-center">Saving amount: ৳<span id="saving-amount">00</span></h3>
                     <h3 class="text-center">Remaining Balance: ৳<span id="remaining-balance">00</span></h3>
 
+                    <div class="notify-section">
+                        <p id="notify-fail" class="notify">❌ Please Enter a Positive Number</p>
+                        <p id="insufficient" class="notify">❌ You Have Insufficient Balance to Save</p>
+
+                    </div>
+
                 </div>
+
             </div>
-            </div>
+
         </section>
     </main>
 
