--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
 
                     <div class="notify-section">
                         <p id="notify-fail" class="notify">❌ Please Enter a Positive Number</p>
-                        <p id="insufficient" class="notify">❌ You Have Insufficient Balance to Save</p>
+                        <p id="insufficient" class="notify">❌ You don't have sufficient balance to save Money</p>
+                        <p id="expense" class="notify">❌ You don't have enough balance</p>
 
                     </div>
 
