--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
                     <h3 class=" text-center">Saving amount: ৳<span id="saving-amount">00</span></h3>
                     <h3 class="text-center">Remaining Balance: ৳<span id="remaining-balance">00</span></h3>
-
+                    <!-- Error Message -->
                     <div class="notify-section">
                         <p id="notify-fail" class="notify">❌ Please Enter a Positive Number</p>
                         <p id="insufficient" class="notify">❌ You don't have sufficient balance to save Money</p>
